--- a/package.json
+++ b/package.json
@@ -20,77 +20,79 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@octokit/rest": "^21.0.2",
-    "@prisma/client": "6.4.1",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-hover-card": "^1.1.4",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.2",
-    "@react-email/components": "^0.0.31",
+    "@octokit/rest": "^21.1.1",
+    "@prisma/client": "6.7.0",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-hover-card": "^1.1.13",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-scroll-area": "^1.2.8",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-separator": "^1.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.11",
+    "@react-email/components": "^0.0.39",
+    "@tailwindcss/postcss": "^4.1.6",
     "@types/xml2js": "^0.4.14",
-    "axios": "^1.7.9",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "critters": "^0.0.25",
     "dompurify": "^3.2.5",
-    "embla-carousel-react": "^8.5.1",
-    "framer-motion": "^11.15.0",
-    "geist": "^1.3.1",
-    "globals": "^15.14.0",
-    "gsap": "^3.12.5",
-    "html-react-parser": "^5.2.3",
-    "lucide-react": "^0.456.0",
-    "next": "14.2.7",
+    "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.10.5",
+    "geist": "^1.4.2",
+    "globals": "^16.1.0",
+    "gsap": "^3.13.0",
+    "html-react-parser": "^5.2.4",
+    "lucide-react": "^0.509.0",
+    "next": "15.3.2",
     "next-auth": "5.0.0-beta.25",
-    "nextjs-toploader": "^3.7.15",
-    "openai": "^4.95.0",
+    "nextjs-toploader": "^3.8.16",
+    "openai": "^4.98.0",
     "photoswipe": "^5.4.4",
-    "posthog-js": "^1.232.4",
-    "prisma": "^6.4.1",
+    "posthog-js": "^1.240.5",
+    "prisma": "^6.7.0",
     "qss": "^3.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
-    "react-photoswipe-gallery": "^3.0.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-photoswipe-gallery": "^3.1.1",
     "react-zoom-pan-pinch": "^3.7.0",
-    "resend": "4.0.1-alpha.0",
-    "sharp": "^0.33.5",
+    "resend": "4.5.1",
+    "sharp": "^0.34.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "xml2js": "^0.6.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.4",
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.17.0",
-    "@next/eslint-plugin-next": "^15.1.3",
-    "@types/cors": "^2.8.17",
-    "@types/node": "^22.10.2",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@typescript-eslint/eslint-plugin": "^8.19.0",
-    "@typescript-eslint/parser": "^8.19.0",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "15.1.2",
-    "eslint-config-prettier": "^9.1.0",
+    "@eslint/compat": "^1.2.9",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.26.0",
+    "@next/eslint-plugin-next": "^15.3.2",
+    "@types/cors": "^2.8.18",
+    "@types/node": "^22.15.17",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
+    "eslint": "^9.26.0",
+    "eslint-config-next": "15.3.2",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.1.7",
-    "lint-staged": "^15.3.0",
-    "postcss": "^8.4.49",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.19.0"
+    "lint-staged": "^15.5.2",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.6",
+    "tw-animate-css": "^1.2.9",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.0"
   },
   "prisma": {
     "schema": "src/prisma/schema.prisma"
